--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "openai": "^5.0.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.28.0"
   }
