--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.5.0",
     "openai": "^5.0.1",
     "qrcode-terminal": "^0.12.0",
